Fixes issue with bottom homepage items not aligning.

--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -61,7 +61,8 @@ html {
       list-style: none;
 
       &.one-up {
-        margin: 30px 0 0 0;
+        margin: 30px auto 0;
+        max-width: 1360px;
         padding: 0;
         list-style: none;
         display: flex;
@@ -75,6 +76,10 @@ html {
 
           .one-up--background {
             z-index: 0;
+            top:0;
+            left:0;
+            width: 100%;
+            height: 100%;
           }
 
           &:hover {
